# vanphubinh_backend

./: Cargo.toml
domain/: Cargo.toml
domain/src/measurement/: uom.rs
domain/src/product/: category.rs
infra/: Cargo.toml
infra/src/: lib.rs  response.rs  state.rs  usecase.rs  util.rs  uuid.rs
interface/: Cargo.toml
interface/src/: lib.rs
interface/src/category/: handler.rs  route.rs
interface/src/uom/: handler.rs  route.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241222_175303_create_uom_table.rs  m20241225_085030_create_category_table.rs
server/: Cargo.toml
server/src/: lib.rs
service/: Cargo.toml
service/src/: lib.rs
service/src/measurement/: create_uom.rs  list_paginated_uoms.rs  mod.rs  service.rs
service/src/product/: list_paginated_categories.rs  mod.rs
src/: main.rs
