[package]
name = "vanphubinh_backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "interface", "infra", "domain", "service"]

[workspace.dependencies]
async-trait = "0.1.83"
axum = "0.7.9"
axum-macros = "0.4.2"
chrono = "0.4.39"
dotenvy = "0.15.7"
sea-orm = { version = "1.1.2", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "with-rust_decimal",
] }
serde = { version = "1.0.215", features = ["derive"] }
short-uuid = "0.1.4"
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.11.0", features = [
  "v7",
  "fast-rng",
  "macro-diagnostics",
] }
[dependencies]
server = { path = "server" }
