[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[lib]
name = "infra"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
short-uuid = { workspace = true }
uuid = { workspace = true }
