[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
sea-orm = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

interface = { path = "../interface" }
infra = { path = "../infra" }
